<resources>
    <string name="app_name">TestApp</string>
    <string name="countriesStr">Страна<font color='#FF0000'>*</font></string>
    <string name="regionsStr">Область<font color='#FF0000'>*</font></string>
    <string name="districtsStr">Район<font color='#FF0000'>*</font></string>
    <string name="localitiesStr">Населенный пункт<font color='#FF0000'>*</font></string>
    <string name="streetsStr">Улица<font color='#FF0000'>*</font></string>
    <string name="houseStr">Дом<font color='#FF0000'>*</font></string>
    <string name="housingStr">Корпус</string>
    <string name="entranceStr">Подьезд</string>
    <string name="floorStr">Этаж</string>
    <string name="flatStr">Квартира</string>
    <string name="saveBtnStr"><font color='#FFFFFF'>СОХРАНИТЬ</font></string>
    <string name="noInternet">Отсутствует подключение к Интернету</string>
    <string name="noHouse">Заполните поле Дом</string>
    <string name="successDataSaving">Данные успешно сохранены</string>
</resources>