<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countriesStr"
                android:labelFor="@id/countries"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:id="@+id/countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regionsStr"
                android:labelFor="@id/regions"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:id="@+id/regions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/districtsStr"
                android:labelFor="@id/districts"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:id="@+id/districts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/localitiesStr"
                android:labelFor="@id/localities"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:id="@+id/localities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/streetsStr"
                android:labelFor="@id/streets"
                android:layout_marginTop="5dp"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/streets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/houseStr"
                android:labelFor="@id/house"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/housingStr"
                android:labelFor="@id/housing"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/housing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entranceStr"
                android:labelFor="@id/entrance"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/entrance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/floorStr"
                android:labelFor="@id/floor"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flatStr"
                android:labelFor="@id/flat"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveBtnStr"
                android:background="@color/saveBtnColor"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>